Fix missing border in left side tip

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,9 +213,11 @@ a {
     color: #000066;
 }
 
-#heading-tip-left,
-#heading-tip-right>h3 {
+.tips-head {
     border-bottom: 3px solid #000066;
+}
+
+.tips-blanket {
     margin: 5px;
 }
 
@@ -257,7 +259,7 @@ a {
 
 /* gallery section at the bottom of home page */
 
-#past-students {
+#past-students h3 {
     font-size: 150%;
     color: rgb(252, 4, 4);
     margin: 0 auto;
